# discord-no-roles-kicker

./: CONFIG.env  Cargo.toml  Dockerfile  Makefile  README.md  database.py  docker-compose.yml  main.py  requirements.txt
commands/: __init__.py  cancel.py  channel.py  kick_list.py  manual_kick.py  reminder_values.py  role.py  setup.py  show_rule.py  timeout.py
kicking/: __init__.py  execute_kick.py  kick_check_loop.py  reminders.py  scheduling.py
migrations/: 20230420223944_initial_migration.sql  20230422145455_add_guild_rules.sql
rust_old/: Makefile  build.rs  docker-compose.yml
rust_old/migrations/: 20230420223944_initial_migration.sql  20230422145455_add_guild_rules.sql
rust_old/src/: commands.rs  handler.rs  main.rs
rust_old/src/commands/: show_rule.rs
src/: commands.rs  handler.rs  kick_manager.rs  main.rs  perform_kick.rs
src/commands/: channel.rs  setup.rs  show_rule.rs  timeout.rs
