[package]
name = "discord-no-roles-kicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
sqlx = { version="0.6.3", features=["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.27.0", features = ["full"] }
